--- a/.github/ISSUE_TEMPLATE/BUG-REPORT.yaml
+++ b/.github/ISSUE_TEMPLATE/BUG-REPORT.yaml
@@ -10,7 +10,7 @@ body:
   - type: textarea
     id: preconditions
     attributes:
-      label: "*Preconditions:*"
+      label: "Preconditions"
       description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
       value: "A bug happened!"
@@ -19,7 +19,7 @@ body:
   - type: textarea
     id: reproduce-steps
     attributes:
-      label: "*Steps To Reproduce:*"
+      label: "Steps To Reproduce"
       description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
       value: "A bug happened!"
@@ -28,7 +28,7 @@ body:
   - type: textarea
     id: actual-result
     attributes:
-      label: "*Actual Result:*"
+      label: "Actual Result"
       description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
       value: "A bug happened!"
@@ -37,7 +37,7 @@ body:
   - type: textarea
     id: expected-result
     attributes:
-      label: "*Expected Result:*"
+      label: "Expected Result"
       description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
       value: "A bug happened!"
@@ -46,7 +46,7 @@ body:
   - type: textarea
     id: attachments
     attributes:
-      label: "*Attachments:*"
+      label: "*Attachments"
       description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
       value: "A bug happened!"
