--- a/.github/ISSUE_TEMPLATE/BUG-REPORT.yaml
+++ b/.github/ISSUE_TEMPLATE/BUG-REPORT.yaml
@@ -14,8 +14,7 @@ body:
       description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
       value: "A bug happened!"
-    validations:
-      required: true
+
   - type: textarea
     id: reproduce-steps
     attributes:
@@ -23,8 +22,7 @@ body:
       description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
       value: "A bug happened!"
-    validations:
-      required: true
+
   - type: textarea
     id: actual-result
     attributes:
@@ -32,8 +30,7 @@ body:
       description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
       value: "A bug happened!"
-    validations:
-      required: true
+
   - type: textarea
     id: expected-result
     attributes:
@@ -41,17 +38,15 @@ body:
       description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
       value: "A bug happened!"
-    validations:
-      required: true
+      
   - type: textarea
     id: attachments
     attributes:
-      label: "*Attachments"
+      label: "Attachments"
       description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
       value: "A bug happened!"
-    validations:
-      required: true      
+
   - type: textarea
     id: logs
     attributes:
