--- a/.github/ISSUE_TEMPLATE/BUG-REPORT.yaml
+++ b/.github/ISSUE_TEMPLATE/BUG-REPORT.yaml
@@ -13,7 +13,7 @@ body:
       label: "Preconditions"
       description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
-      value: "A bug happened!"
+      value: "* User is logged in"
 
   - type: textarea
     id: reproduce-steps
