--- a/.github/ISSUE_TEMPLATE/BUG-REPORT.yaml
+++ b/.github/ISSUE_TEMPLATE/BUG-REPORT.yaml
@@ -3,11 +3,11 @@ description: File a bug report
 title: "[Bug]: "
 labels: ["bug"]
 body:
-  - type: input
+  - type: textarea
     id: description
     attributes:
       label: "Description"
-      description: "Provide a short description of the bug"
+      description: "Provide a description of the bug"
     validations:
       required: true
   - type: textarea
