--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -7,5 +7,8 @@ body:
     attributes:
       value: "Please describe your feature request in details"
   - type: textarea
+		id: description
     attributes:
       label: "Feature Request"
+		validations:
+      required: true
